[tool.poetry]
name = "skilswapbackend"
version = "0.1.0"
description = ""
authors = ["jonasstDev <jonas.strehler@t-online.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
flask-cors = "^4.0.0"
black = "^24.2.0"
pytest = "^8.0.2"
pytest-flask = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
